added api to get services, added dummyService
