# backend/app/swagger.json
@@ -23,7 +23,7 @@
     },
     {
       "name": "Services",
-      "description": "API's for adding new services"
+      "description": "API's for services"
     },
     {
       "name": "user",
@@ -208,15 +208,14 @@
         ],
         "parameters": [
           {
-            "name":"searchText",
+            "name": "searchText",
             "in": "body",
-            "description":"E-Mail to identify user and send a new password",
-            "required":true,
+            "description": "E-Mail to identify user and send a new password",
+            "required": true,
             "schema": {
               "$ref": "#/definitions/forgotPassword"
-            },
+            }
           }
-
         ],
         "responses": {
           "200": {
@@ -366,6 +365,70 @@
           }
         }
       }
+    },
+    "/service": {
+      "get": {
+        "tags": [
+          "Services"
+        ],
+        "summary": "Show all registered services)",
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          },
+          "401": {
+            "description": "unauthorized request"
+          }
+        }
+      }
+    },
+    "/service/register": {
+      "post": {
+        "tags": [
+          "Services"
+        ],
+        "summary": "Register a new service",
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "User object that needs to be sent",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Service"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "type": "string",
+              "items": {
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid status value"
+          }
+        },
+        "security": [
+          {
+            "petstore_auth": [
+              "write:pets",
+              "read:pets"
+            ]
+          }
+        ]
+      }
     }
   },
   "securityDefinitions": {
@@ -415,31 +478,67 @@
         "name": "Order"
       }
     },
-       "User": {
+    "User": {
       "type": "object",
       "properties": {
-        "username": {
-          "type": "string"
-        },
-        "vorname": {
-          "type": "string"
-        },
-        "nachname": {
-          "type": "string"
-        },
         "email": {
+          "type": "string"
+        },
+        "userGroup": {
           "type": "string"
         },
         "password": {
           "type": "string"
         },
-        "phone": {
+        "firstname": {
           "type": "string"
         },
-        "userGroup": {
+        "lastname": {
+          "type": "string"
+        },
+        "adress": {
+          "type": "string"
+        },
+        "number": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "birthday": {
+          "type": "string"
+        },
+
+      },
+      "xml": {
+        "name": "Order"
+      }
+    },
+       "Service": {
+      "type": "object",
+      "properties": {
+
+        "provider": {
+          "type": "string"
+        },
+        "serviceTitle": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "providerId": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "serviceType": {
+          "type": "string"
+        },
+        "price": {
           "type": "integer",
           "format": "int32",
           "description": "User Status"
+        },
+        "city": {
+          "type": "string"
         }
       },
       "xml": {
@@ -460,7 +559,7 @@
         "password": {
           "type": "string"
         }
-        }},
+        }}
 
       },
   "externalDocs": {
